refactor build logic into convention plugins